[tool.poetry]
name = "gptauthor"
version = "1.0.2"
description = "GPTAuthor is a tool for writing long form stories using AI"
authors = ["Dylan Hogg <dylanhogg@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dylanhogg/gptauthor"
keywords = ["GPTAuthor"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment",
]
include = ["prompts-openai-drama.yaml", "prompts-echoes-of-atlantis.yaml"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.28.1"
httpx = "^0.25.0"
networkx = "^3.2.1"
beautifulsoup4 = "^4.12.3"
pyvis = "^0.3.2"
joblib = "^1.3.2"
tenacity = "^8.2.3"
omegaconf = "^2.3.0"
matplotlib = "^3.8.2"
python-dotenv = "^1.0.1"
click = "^8.1.7"
typer = "^0.9.0"
rich = "^13.7.0"
tqdm = "^4.66.1"
loguru = "^0.7.2"
markdown = "^3.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
ruff = "^0.1.15"
coverage = "^7.4.1"
pre-commit = "^3.6.0"
pip-audit = "^2.7.0"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.poetry.scripts]
gptauthor = 'gptauthor.console:typer_app'

[tool.ruff]
# https://docs.astral.sh/ruff/rules/
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "C90", # mccabe complexity
]
ignore = [
    "E501", # line too long, handled by black
    "D203", # 1 blank line required before class docstring
]
line-length = 120
extend-exclude = [".joblib_cache"]
fixable = ["ALL"]
unfixable = []
target-version = "py39"
